Changelog for Poi
=================


2.0a2 (unreleased)
------------------

- Modernize, cleanup and reindent all templates.
  [maurits]

- Slightly alter the templates of tracker and issue to use the
  content-core slot of Plone 4.
  [maurits]

- Added Technician role.  You can give a user this role by adding the
  user id in the new 'technicians' field of a tracker.  Technicians
  have slightly less permissions than TrackerManagers, and will only
  get an email for issues that have been assigned to them (now or in
  the past).
  [maurits]

- Purge references to old workflow scripts in the poi_issue_workflow.
  [Maurits]

- Instead of adding the contact email field of an issue to its
  watchers field in the setContactEmail method, we now do that in an
  event handler; this fixes a problem no watchers being set initially
  when the contactEmail field remained at its default value.
  [maurits]

- Send parameter names in notifications
  [sargo]

- Polish translation update
  [sargo]

- Do not completely remove the title field in the PSC tracker, but
  only make it invisible while editing.  This makes sure that
  folder_contents does not throw an error trying to find the title
  field.
  [maurits]

- Clean up type definitions (mostly: do not try to hide the
  properties/metadata tab that already is no longer there).
  [maurits]


2.0a1 (2010-02-27)
------------------

- Depend on collective.watcherlist >= 0.2 for sending the resolved
  email only to the initial poster.
  [maurits]

- Polish translation
  [sargo]
  
- Compatibility with Chameleon
  [sargo]
 
- Minor fixes for i18n support
  [sargo]

- Added upgrade step to remove the local Manager role from all tracker
  managers and instead give them the TrackerManager role.
  [maurits]

- Define our permissions in zcml and configure them in rolemap.xml.
  [maurits]

- Added TrackerManager role.  Give this role to users mentioned in the
  managers field of a tracker, instead of the more powerful Manager
  role.