@@ -28,6 +28,13 @@
      />
 
   <browser:page
+     name="toggle_watching"
+     for="Products.Poi.interfaces.ITracker"
+     permission="zope2.View"
+     class=".watchers.WatcherView"
+     />
+
+  <browser:page
      name="poi_issue_quicksearch"
      for="Products.Poi.interfaces.ITracker"
      permission="zope2.View"
